# yanet2

./: .gitignore  .worktreeinclude  CLAUDE.md  Cargo.toml  Makefile  README.md  buf.yaml  dataplane.yaml  go.mod  go.sum  meson.build  package-lock.json  package.json
.claude/agents/: architect.md  bug-hunter.md  coder-c.md  coder-go.md  coder-rust.md  coder-ui.md  networking-expert.md  performance-engineer.md  planner.md  reviewer.md
.github/workflows/: build-deb.yml  build-push-images.yml  proto-lint.yml  rust-check.yml  web-check.yml
api/: agent.h  counter.h  info.h
cli/core/: Cargo.toml
cli/modules/gateway/: Cargo.toml
cli/modules/gateway/src/: main.rs
cli/modules/metrics/: Cargo.toml
cli/modules/metrics/src/: main.rs
cli/modules/ready/: Cargo.toml
cli/modules/ready/src/: main.rs
common/: big_array.h  data_pipe.h  hugepages.h  lpm.h  lpm_wide.h  memory.h  memory_address.h  range_index.h  rcu.h  registry.h  spinlock.h  str_index.h  value.h
common/btree/: u16.h  u32.h  u64.h
common/commonpb/: meson.build
common/commonpb/v1/: ipaddr.proto  iprange.proto  json.go  json_test.go  macaddr.proto  metric.proto  target.proto
common/filterpb/: filter.proto  meson.build
common/filterpb/v1/: convert.go  filter.proto
common/readinesspb/: meson.build  readiness.proto
controlplane/: meson.build
controlplane/builtin/: counters.go  device.go  function.go  inspect.go  logging.go  pipeline.go
controlplane/bundle/: bundle.go  cfg.go
controlplane/ffi/: agent.go  port.go  shm.go
controlplane/gateway/: auth_service.go  backend.go  gateway.go  gateway_test.go  metrics_service.go  readiness.go  readiness_test.go  registrar.go  registration_loop.go  registry.go  registry_test.go  runner.go  runner_test.go  service.go
controlplane/yncp/: director.go
controlplane/ynpb/: function.proto  gateway.proto  meson.build  module.proto  pipeline.proto
controlplane/ynpb/v1/: auth.proto  counters.proto  device.proto  function.proto  gateway.proto  inspect.proto  logging.proto  metrics.proto  module.proto  pipeline.proto  readiness.proto
dataplane/: config.c  config.h  dataplane.c  dataplane.h  device.h  dpdk.c  dpdk.h  main.c  meson.build  numa.c  numa.h  worker.c  worker.h
debian/: control  yanet2-cli.install  yanet2-decap-operator.install  yanet2-decap-operator.service  yanet2-forward-operator.install  yanet2-forward-operator.service
devices/: meson.build
devices/plain/cli/: Cargo.toml  build.rs
devices/plain/cli/src/: main.rs
devices/trafgen/api/: controlplane.c  controlplane.h  meson.build
devices/trafgen/dataplane/: config.h  dataplane.c  dataplane.h  meson.build
devices/trafgen/tests/: leak_test.c  meson.build
docs/: proto-compatibility.md  virtual-run.org
filter/: meson.build
filter/compiler/: attribute.h  helper.c  ipfrag.c
filter/query/: attribute.h  device.h  ipfrag.h  net6.h
filter/tests/: bench_net4.c  bench_net4_fast.c  bench_net6.c  bench_net6_fast.c  meson.build
lib/: meson.build
lib/controlplane/agent/: agent.c  agent.h  agent_test.c  meson.build
lib/controlplane/config/: cp_device.c  cp_device.h  econtext.c  zone.c  zone.h
lib/counters/: counters.c  counters.h
lib/dataplane/config/: bootstrap.c  bootstrap.h  counter_storage.c  meson.build  module_loader.c  module_loader.h  plugin_loader.c  plugin_loader.h  zone.h
lib/dataplane/counters/: module.h
lib/dataplane/module/: packet_front.h
lib/dataplane/packet/: data.h  decap.c  encap.c  mss.c  packet.c  packet.h
lib/dataplane/pipeline/: pipeline.c
lib/dataplane/worker/: pipeline_round.c  worker.c
lib/dataplane_ut/: dataplane_ut.c  dataplane_ut.h
lib/dataplane_ut/tests/: meson.build  passthrough_test.c
lib/filter/: README.md  compiler.h  meson.build  rule.h
lib/filter/compiler/: attribute.h  device.c  helper.c  helper.h  ipfrag.c  net4.c  net4_fast.c  net6.c  net6_fast.c  port.c  port_fast.c  proto.c  proto_range.c  proto_range_fast.c  segments.c  segments.h  vlan.c
lib/filter/query/: net6.h  proto.h
lib/filter/tests/: basic_net4.c  basic_net4_fast.c  basic_net6.c  basic_net6_fast.c  basic_port_fast.c  basic_ports.c  basic_proto.c  basic_proto_range.c  basic_proto_range_fast.c  basic_vlan.c  bench_net4.c  bench_net4_fast.c  bench_net6.c  bench_net6_fast.c  combo_net4_port_proto_dst.c  combo_net4_port_src.c  combo_net6_port_src.c  corner.c  helpers.h  macros.c  memory.c  meson.build  net4_ports.c  net6_overlap.c
lib/filter/tests/shm/: common.h  compiler.c
lib/fwstate/: fwmap.h  sync.c
lib/utils/: packet.c  packet.h
modules/: meson.build
modules/balancer2/: meson.build
modules/balancer2/controlplane/balancerpb/: meson.build
modules/balancer2/controlplane/balancerpb/v1/: balancer.proto  config.proto  filter.proto  state.proto
modules/blackhole/: meson.build
modules/blackhole/api/: controlplane.c  controlplane.h  meson.build
modules/blackhole/controlplane/blackholepb/: meson.build
modules/blackhole/controlplane/blackholepb/v1/: blackhole.proto
modules/blackhole/dataplane/: dataplane.c  dataplane.h  meson.build
modules/mirror/fuzzing/: meson.build  mirror.c
modules/pdump/controlplane/pdumppb/: meson.build
modules/pdump/controlplane/pdumppb/v1/: pdump.proto
operators/: meson.build
operators/bird-adapter/: service.go
operators/decap/: meson.build
operators/decap/cli/: Cargo.toml  build.rs
operators/decap/cli/src/: main.rs
operators/decap/cmd/yanet-decap-operator/: main.go
operators/decap/etc/yanet/: yanet-decap-operator-default.yaml
operators/decap/etc/yanet/decap.d/: default.yaml
operators/decap/internal/operator/: actuator_gateway.go  cfg.go  cfg_test.go  operator.go  options.go  prefixes.go  readiness_service.go  source.go
operators/decap/operatorpb/: meson.build
operators/decap/operatorpb/v1/: readiness.proto
operators/forward/: meson.build
operators/pipeline/: meson.build
operators/route/operatorpb/: meson.build
operators/route/operatorpb/v1/: convert.go  neighbour.proto  operator.proto  readiness.proto  route.proto
tests/common/: big_array_test.c  (+8 more)
web/: README.md  tsconfig.json  vite.config.ts
(+831 files in other folders)
