yanet_libdir = include_directories('.')

subdir('logging')
subdir('errors')
subdir('counters')
subdir('dataplane')
subdir('controlplane')
subdir('utils')
subdir('filter') # depends on dataplane and utils libs
subdir('fwstate') # depends on dataplane lib
subdir('fuzzing')
subdir('dataplane_ut')
subdir('tests') # depends on utils lib
