[package]
name = "yanet-cli-gateway"
version = "0.1.0"
edition = "2024"
publish = false

rust-version = "1.85"

[[bin]]
name = "yanet-cli-gateway"
path = "src/main.rs"

[dependencies]
ynpb = { path = "../../../common/rust/ynpb", version = "0.1", package = "yanet-ynpb" }
ync = { path = "../../core", version = "0.1", package = "yanet-cli" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync"] }
tonic = { version = "0.13", features = ["gzip"] }
colored = "3"
tabled = { version = "0.18", features = ["ansi"] }
