[package]
name = "yanet-cli-metrics"
version = "0.1.0"
edition = "2024"
publish = false

rust-version = "1.85"

[[bin]]
name = "yanet-cli-metrics"
path = "src/main.rs"

[dependencies]
ync = { path = "../../core", version = "0.1", package = "yanet-cli" }
commonpb = { path = "../../../common/rust/commonpb", version = "0.1", package = "yanet-commonpb" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync"] }
tabled = { version = "0.18", features = ["ansi"] }
